Added product serializer
