# app/serializers/product.serializer.js
@@ -1,0 +1,6 @@
+module.exports = (serializer) => {
+  serializer.register('product', {
+    id: 'sku',
+    whitelist: ['name', 'description', 'price', 'kg_price', 'weight', 'active', 'image'],
+  });
+}
